This commit is the approach where all the elements are <g> inside one big <svg>. The graph algorithm should be easiest inside this, but there' a bug where dragging it onto the graph makes it go behind the graph. console.log reveals that the draggable is still hitting the graph element. So what is going on? z-index didn't fix it. Answer may be in cloning, but that needs some research.

--- a/View/main.css
+++ b/View/main.css
@@ -42,6 +42,7 @@ html, body {
     width: 75%;
     left: 0;
     background-color: #ccaabb;
+    z-index: -1;
 }
 
 #availableCourses {
@@ -51,18 +52,6 @@ html, body {
     white-space: nowrap;
 }
 
-
-.drag-area {
-    width: 200px;
-    height: 200px;
-    background: #fff;
-    display: inline-block;
-    vertical-align: top;
-    position: relative;
-    margin-left: 30px;
-    border: 1px solid #ddd;
-    box-shadow: 3px 3px 6px 3px rgba(0,0,0,0.06)
-}
 .area {
     position:absolute;
     margin: 0 auto;
@@ -87,6 +76,9 @@ svg {
     height: 100%;
 }
 
+.draggable {
+    position: absolute;
+}
 
 #smallBox {
     position: absolute;
